fix image space issue
remove extra space reserved for descenders in letters since imgs are inline elements

--- a/src/components/Carousel/CarouselItem.module.scss
+++ b/src/components/Carousel/CarouselItem.module.scss
@@ -14,6 +14,11 @@
 
     // overflow: hidden;
     transition: all 500ms ease-out;
+
+    // remove extra space reserved for descenders in letters since imgs are inline elements
+    & img {
+      display: block;
+    }
   }
 
   & .title {
